# disni

./: AUTHORS  README.md  groups  pom.xml  project.config
.github/workflows/: build.yml  c-cpp.yml
data/: latency.txt
libaffinity/: config.h.in  configure.ac
libaffinity/src/: Makefile.am  com_ibm_disni_util_NativeAffinity.c  com_ibm_disni_util_NativeAffinity.h
libdisni/: .gitignore  Makefile.am  autoprepare.sh  build.sh  build_libdisni.py  config.h.in  configure.ac  libdisni.spec.in
libdisni/debian/: changelog  control  copyright  rules
libdisni/src/: CMakeLists.txt  Makefile.am  com_ibm_disni_rdma_verbs_impl_NativeDispatcher.cpp  com_ibm_disni_rdma_verbs_impl_NativeDispatcher.h  com_ibm_disni_verbs_impl_NativeDispatcher.cpp  com_ibm_disni_verbs_impl_NativeDispatcher.h  test.cpp
libdisni/src/affinity/: CMakeLists.txt  Makefile.am  com_ibm_disni_util_NativeAffinity.c
libdisni/src/nvmef/: Makefile.am  com_ibm_disni_nvmef_spdk_NativeDispatcher.cpp  com_ibm_disni_nvmef_spdk_NativeDispatcher.h
libdisni/src/verbs/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  com_ibm_disni_rdma_verbs_impl_NativeDispatcher.cpp  com_ibm_disni_rdma_verbs_impl_NativeDispatcher.h  com_ibm_disni_rdma_verbs_impl_NativeDispatcher.lo  com_ibm_disni_verbs_impl_NativeDispatcher.cpp  com_ibm_disni_verbs_impl_NativeDispatcher.h  libverbs.la
libdisni/src/verbs/.deps/: com_ibm_disni_rdma_verbs_impl_NativeDispatcher.Plo  com_ibm_disni_verbs_impl_NativeDispatcher.Plo
libdisni/src/verbs/.libs/: libverbs.la
src/main/java/com/ibm/disni/: DiSNIEndpoint.java  DiSNIGroup.java  DiSNIServerEndpoint.java  RdmaActiveCqProcessor.java  RdmaActiveEndpoint.java  RdmaActiveEndpointGroup.java  RdmaCmProcessor.java  RdmaCqProcessor.java  RdmaCqProvider.java  RdmaEndpoint.java  RdmaEndpointFactory.java  RdmaEndpointGroup.java  RdmaEndpointProvider.java  RdmaPassiveEndpointGroup.java  RdmaServerEndpoint.java
src/main/java/com/ibm/disni/endpoints/: RdmaActiveClientEndpoint.java  RdmaActiveCqProcessor.java  RdmaActiveEndpointGroup.java  RdmaClientEndpoint.java  RdmaCmProcessor.java  RdmaCqProcessor.java  RdmaCqProvider.java  RdmaEndpointFactory.java  RdmaEndpointGroup.java  RdmaEndpointProvider.java  RdmaPassiveEndpointGroup.java  RdmaServerEndpoint.java
src/main/java/com/ibm/disni/nvmef/: NvmeCommand.java  NvmeEndpoint.java  NvmeEndpointGroup.java  NvmeOperation.java  NvmeResourceIdentifier.java  NvmeServerEndpoint.java
src/main/java/com/ibm/disni/nvmef/spdk/: IOCompletion.java  NatObject.java  NativeDispatcher.java  NmeCommandSpecificStatusCode.java  Nvme.java  NvmeController.java  NvmeControllerData.java  NvmeControllerOptions.java  NvmeGenericCommandStatusCode.java  NvmeMediaErrorStatusCode.java  NvmeNamespace.java  NvmeQueuePair.java  NvmeStatusCodeType.java  NvmeTransportId.java  NvmeTransportType.java  NvmfAddressFamily.java  NvmfConnection.java  NvmfOperation.java  NvmfSubsystem.java  NvmfSubsystemMode.java  NvmfSubtype.java  NvmfTarget.java  NvmfTransportName.java  PendingOperationException.java
src/main/java/com/ibm/disni/rdma/: RdmaActiveCqProcessor.java  RdmaActiveEndpoint.java  RdmaActiveEndpointGroup.java  RdmaCmProcessor.java  RdmaCqProcessor.java  RdmaCqProvider.java  RdmaEndpoint.java  RdmaEndpointFactory.java  RdmaEndpointGroup.java  RdmaEndpointProvider.java  RdmaPassiveEndpointGroup.java  RdmaServerEndpoint.java
src/main/java/com/ibm/disni/rdma/endpoints/: RdmaActiveClientEndpoint.java  RdmaActiveCqProcessor.java  RdmaActiveEndpointGroup.java  RdmaClientEndpoint.java  RdmaCmProcessor.java  RdmaCqProcessor.java  RdmaCqProvider.java  RdmaEndpointFactory.java  RdmaEndpointGroup.java  RdmaEndpointProvider.java  RdmaPassiveEndpointGroup.java  RdmaServerEndpoint.java
src/main/java/com/ibm/disni/rdma/verbs/: IbvAhAttr.java  IbvCQ.java  IbvCompChannel.java  IbvContext.java  IbvGlobalRoute.java  IbvMr.java  IbvPd.java  IbvQP.java  IbvQPCap.java  IbvQPInitAttr.java  IbvQpAttr.java  IbvRecvWR.java  IbvSendWR.java  IbvSge.java  IbvWC.java  RdmaCm.java  RdmaCmEvent.java  RdmaCmId.java  RdmaConnParam.java  RdmaEventChannel.java  RdmaProvider.java  RdmaVerbs.java  SVCDeregMr.java  SVCGetCqEvent.java  SVCPollCq.java  SVCPostRecv.java  SVCPostSend.java  SVCRegMr.java  SVCReqNotify.java  StatefulVerbCall.java
src/main/java/com/ibm/disni/util/: DiSNILogger.java  EndianUtils.java  GetOpt.java  MemBuf.java  MemoryAllocation.java  MemoryUtils.java  NativeAffinity.java  NetUtils.java  StopWatch.java
src/main/java/com/ibm/disni/verbs/: IbvAhAttr.java  IbvCQ.java  IbvCompChannel.java  IbvContext.java  IbvDeviceAttr.java  IbvGlobalRoute.java  IbvMr.java  IbvPd.java  IbvQP.java  IbvQPCap.java  IbvQPInitAttr.java  IbvQpAttr.java  IbvRecvWR.java  IbvSendWR.java  IbvSge.java  IbvWC.java  RdmaCm.java  RdmaCmEvent.java  RdmaCmId.java  RdmaConnParam.java  RdmaEventChannel.java  RdmaProvider.java  RdmaVerbs.java  SVCDeregMr.java  SVCGetCqEvent.java  SVCPollCq.java  SVCPostRecv.java  SVCPostSend.java  SVCRegMr.java  SVCReqNotify.java  StatefulVerbCall.java
src/main/java/com/ibm/disni/verbs/impl/: NatCmaIdPrivate.java  NatDeregMrCall.java  NatGetCqCall.java  NatIbvCQ.java  NatIbvCompChannel.java  NatIbvContext.java  NatIbvMr.java  NatIbvPd.java  NatIbvQP.java  NatIbvRecvWR.java  NatIbvSendWR.java  NatIbvSge.java  NatObject.java  NatPollCqCall.java  NatPostRecvCall.java  NatPostSendCall.java  (+8 more)
src/test/java/com/ibm/disni/: CmdLineCommon.java
src/test/java/com/ibm/disni/benchmarks/: Nvmef.java  NvmefClient.java  NvmefEndpointClient.java  NvmefEndpointServer.java  NvmefServer.java  NvmfClient.java  NvmfClientBenchmark.java  NvmfEndpointClient.java  NvmfEndpointServer.java  NvmfServer.java  RDMAvsTcpBenchmarkClient.java  RDMAvsTcpBenchmarkServer.java  RdmaBenchmarkCmdLine.java  ReadClient.java  ReadServer.java  SendRecvClient.java  SendRecvCmdLine.java  SendRecvServer.java
src/test/java/com/ibm/disni/examples/: AtomicClient.java  AtomicServer.java  NvmeInit.java  ReadClient.java  ReadServer.java  SendRecvClient.java  SendRecvServer.java  SpdkProbe.java  VerbsClient.java  VerbsServer.java  VerbsTools.java
(+51 files in other folders)
